# GCP_Experiments

./: .gitattributes  .gitignore  ApacheBeamNotebook.ipynb  Dockerfile  OBBAgentExample.ipynb  Pairs Trading.html  Pairs Trading.ipynb  PairsTrading.txt  README.md  StockAndNewsAPIs.ipynb  pyproject.toml  requirements.txt  vix_test.py
.devcontainer/: Dockerfile  devcontainer.json
cloud_functions/companystats/: main.py
cloud_functions/cusip2ticker/: cusip2ticker.py  requirements.txt
cloud_functions/dataflow_clf/: main.py  requirements.txt
cloud_functions/future_earnings/: future_earnings.py  requirements.txt
cloud_functions/marketstats_cls_function/: main.py
cloud_functions/past_earnings/: past_earnings.py
cloud_functions/stock_ticker/: requirements.txt  stock_ticker.py
cloud_functions/symbol2cik/: symbol2cik.py
cloud_run/sec_scraper/: Dockerfile  Readme.md  debug_payload.json  debugger.py  deploy.sh  deploy_13f.sh  deploy_backfill.sh  deploy_form4.sh  deploy_quarterly_form4.sh  fred_test.py  main.py  requirements.txt  scraper.py  scraper_13f_daily.py  scraper_form4.py  scraper_form4_backfill.py  scraper_job.py  scraper_job_form4.py  scraper_job_form4_qtr.py  setup_gcp.sh
cloud_run/trump_scraper/: Dockerfile  Readme.md  deploy.sh  requirements.txt  run.sh  setup_chrome.py  trump_scraper.py
dataflow/: Readme.txt  beam_test.py  create_flextemplate.txt  dataflow_build.yaml  edgar_main.py  howtorun.txt  requirements.txt  scrapy.txt  write_to_edgar.py
dataflow/edgar_flow/: Dockerfile  run.yaml  (+24 more)
devcontainer/: .devcontainer.json
scrapy/: sample_run.txt
(+250 files in other folders)
